Fix burger-menu icon visibility and style postion

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ hr {
 
 .mobile-menu-i {
   position: fixed;
-  right: 40px;
+  right: 20px;
   top: 20px;
   color: white;
 }
